--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -23,6 +23,27 @@
 
 }
 
+.basket-container {
+    position: relative;
+    display: inline-block;
+}
+
+.badge {
+    position: absolute;
+    top: -10px; 
+    right: -10px; 
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 4px 4px;
+    border-radius: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 10px; 
+    height: 10px;
+  }
 
 
 
