--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,8 +1,7 @@
 .menu{
-    width: 100%;
+    width: auto;
     background-color: #4d4b4b;
     height: 80px;
-    box-sizing: border-box;
 
     &__list{
         display: flex;
@@ -10,9 +9,12 @@
         list-style: none;
         align-items: center;
         justify-content: space-around;
-        flex-wrap: wrap;
         margin: 0;
         padding: 0;
+
+        &.with-badge{
+            padding-right: 20px; 
+        }
     }
 
     input{
@@ -27,7 +29,6 @@
 .basket-container {
     position: relative;
     display: inline-block;
-    box-sizing: border-box;
 }
 
 .badge {
@@ -39,6 +40,7 @@
     font-size: 12px;
     font-weight: bold;
     padding: 4px;
+    margin: 0;
     border-radius: 60%;
     display: flex;
     justify-content: center;
@@ -46,6 +48,5 @@
     min-width: 10px; 
     height: 10px;
   }
-
 
 
