--- a/src/components/AdminPage/Admin.scss
+++ b/src/components/AdminPage/Admin.scss
@@ -24,6 +24,33 @@
             background-color: #0056b3;
         }
     }
+
+    &__menu {
+        position: fixed;
+        background: white;
+        padding: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        z-index: 1000;
+        border-radius: 8px;
+
+        & button {
+            display: block;
+            margin: 10px 0;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #0056b3;
+            }
+        }
+    }
 }
 
-
+a {
+    text-decoration: none;
+    color: white;
+}
