--- a/src/components/AdminPage/Admin.scss
+++ b/src/components/AdminPage/Admin.scss
@@ -1,62 +1,3 @@
-// .admin {
-
-//     &__header {
-//         display: flex;
-//         list-style: none;
-//         align-items: center;
-//         justify-content: space-evenly;
-//         flex-wrap: wrap;
-//         padding-right: 40px;
-//     }
-
-//     &__logout-button {
-//         background-color: #007bff;
-//         color: white;
-//         border: none;
-//         padding: 10px 20px;
-//         border-radius: 5px;
-//         cursor: pointer;
-//         font-size: 16px;
-//         margin: 5px;
-//         transition: background-color 0.3s ease;
-
-//         &:hover {
-//             background-color: #0056b3;
-//         }
-//     }
-
-//     &__menu {
-//         position: absolute;
-//         background-color: #fff;
-//         border: 1px solid #ddd;
-//         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-//         padding: 10px;
-//         z-index: 100;
-//         word-wrap: break-word;
-//         transition: all 0.2s ease-in-out;
-
-//         & button {
-//             display: block;
-//             margin: 10px 0;
-//             padding: 10px 20px;
-//             background-color: #007bff;
-//             color: white;
-//             border: none;
-//             border-radius: 4px;
-//             cursor: pointer;
-
-//             &:hover {
-//                 background-color: #0056b3;
-//             }
-//         }
-//     }
-// }
-
-// a {
-//     text-decoration: none;
-//     color: white;
-// }
-
 .admin {
 
     &__header {
@@ -153,4 +94,35 @@ a {
 
 .admin__menu button:nth-child(3):hover {
     background-color: #1e88e5;
+}
+
+.footer__card.deleted {
+    position: relative;
+    opacity: 0.5; 
+
+    .deleted-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 0, 0, 0.6); 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 24px;
+        font-weight: bold;
+    }
+}
+
+.old-price {
+    text-decoration: line-through;
+    color: red; 
+    margin-right: 10px;
+}
+
+.new-price {
+    color: green; 
+    font-weight: bold;
 }
