--- a/src/components/HomePage/Home.scss
+++ b/src/components/HomePage/Home.scss
@@ -103,6 +103,8 @@ main {
 
     .footer__btn:hover {
         background-color: #0056b3;
+        transition: all 0.3s;
+        transform: scale(1.05);
     }
 
     span {
