--- a/src/components/Basket/Basket.scss
+++ b/src/components/Basket/Basket.scss
@@ -103,4 +103,9 @@
     cursor: pointer;
     font-size: 1em;
     
+    &:hover{
+        background-color: #0056b3;
+        transition:all 0.3s;
+        transform: scale(1.05);
+    }
 }
