--- a/src/components/AdminPage/CreateCustomCard/CustomCard.scss
+++ b/src/components/AdminPage/CreateCustomCard/CustomCard.scss
@@ -1,12 +1,16 @@
 .customForm {
     width: 100%;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+
+    
 
     &__list {
         list-style: none;
+        padding: 0;
     }
 
     .customForm__item {
@@ -31,3 +35,10 @@
 .customForm__item--input:focus {
     border-bottom-color: #007bff;
 }
+
+.formFooter__button{
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+}
+
